--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
 
 										<p>I am an open-minded individual with a proven track record in developing software (web and mobile).</p>
 
-										<p>I have strong technical skills as well as excellent interpersonal skills. I am eager to be challenged in order to grow and improve my communication and professional skills gained through previous experiences.</p>
-
+										<p>I have strong technical skills as well as excellent interpersonal skills. I am eager to be challenged in order to grow and improve my communication and professional skills gained through previous experiences.</p
+										
+										<p><a href="https://plus.google.com/115430368818653912446" rel="publisher">Google+</a></p>
 									</div>
 								</div>
 							</div>
