--- a/index.html
+++ b/index.html
@@ -1,91 +1,8 @@
-<!DOCTYPE html>
-
-<!--[if lt IE 7]>
-<html class="no-js ie6 oldie" lang="en"> <![endif]-->
-<!--[if IE 7]>
-<html class="no-js ie7 oldie" lang="en"> <![endif]-->
-<!--[if IE 8]>
-<html class="no-js ie8 oldie" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!-->
-<html class="no-js" lang="en"> <!--<![endif]-->
-
-
+<html>
 <head>
-
 	<meta charset="utf-8">
-
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
 	<title>Fatih Sever</title>
-
-	<meta name="viewport" content="width=device-width,initial-scale=1">
-
-	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Muli:400,400italic|Ubuntu:500,700">
-	<link rel="stylesheet" href="css/style.css">
-
-	<script src="js/libs/modernizr.min.js"></script>
-
 </head>
-
-<body class="light">
-
-	<div id="background-pattern" class="predifined-1">
-
-		<div id="background-radial">
-
-			<div id="container">
-
-				<header class="brown">
-
-				</header>
-
-				<div id="card">
-
-					<div id="card-header" class="red">
-					</div>
-					<div id="card-content">
-						<div id="card-content-frame">
-							<div id="card-content-wrap">
-								<div id="about" class="content clearfix">
-									<div>
-										<h1>Fatih Sever</h1>
-
-										<div style="height:10px;"></div>
-
-										<p>I am an open-minded individual with a proven track record in developing software (web and mobile).</p>
-
-										<p>I have strong technical skills as well as excellent interpersonal skills. I am eager to be challenged in order to grow and improve my communication and professional skills gained through previous experiences.</p
-										
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div id="card-footer"></div>
-
-				</div>
-
-			</div>
-
-		</div>
-
-	</div>
-
-
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="js/libs/jquery.min.html"><\/script>')</script>
-
-	<script defer src="js/script.js"></script>
-	
-	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-	
-	  ga('create', 'UA-52947973-1', 'auto');
-	  ga('send', 'pageview');
-	</script>
+<body>
 </body>
-
 </html>
